# shenk

./: .gitignore  CMakeLists.txt  README.md  assembly.h  build.sh  components.h  conditions.h  geometry.h  main.cpp  stress.h  volume.h
src/: CMakeLists.txt  main.cpp  volume.h
src/results/: geometry_tests.Cylinder_tests.Cylinder_initialization.approved.txt  geometry_tests.Ellipspoid_tests.Ellipspoid_initialization.approved.txt
src/shenk/: components.h  conditions.h  geometry.h  shenk.h  stress.h  volume.h
tests/: CMakeLists.txt  conditions_tests.cpp  geometry_tests.cpp  materials.h  volume_tests.cpp
tests/results/: conditions_tests.Condition_tests.Condition_initialization.approved.txt  geometry_tests.Cylinder_tests.Cylinder_initialization.approved.txt  geometry_tests.Ellipspoid_tests.Ellipspoid_initialization.approved.txt  geometry_tests.RectangularPlate_tests.RectangularPlate_initialization.approved.txt  geometry_tests.Sphere_tests.Sphere_initialization.approved.txt  volume_tests.Cylinder_Volume_Tests.InternalVolume.approved.txt  volume_tests.Ellipsoid_Volume_Tests.InternalVolume.approved.txt  volume_tests.Sphere_Volume_Tests.InternalVolume.approved.txt
